--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -1,35 +1,51 @@
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300' rel='stylesheet' type='text/css'>
 <section data-ng-controller="HomeController">
 	<div class="container">
 		<div class="row">
 			<div id="00001" class="post col-md-12">
 				<a href="#" class="postlink"></a>
-				<span class="title">Sample post</span>
-				<p>This is a random post</p>
+				<span class="title">Sample post #1</span>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis consequat orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 			</div>
 			<div class="clearfix"></div>
 			<div class="trapezoid col-md-12"></div>
 			<div class="comment-container">
-				<span class="comment-list-header">12 Comments</span>
+				<span class="comment-list-header">3 Comments</span>
+				<hr>
 				<div class="comment-body">
 					<span class="userid">Anonymous</span>
 					<span class="time-stamp">2014-07-17 11:45AM</span>
-					<p>Comment 1</p>
+					<p>Hello World</p>
 				</div>
 				<div class="comment-body">
 					<span class="userid">Anonymous</span>
-					<span class="time-stamp">2014-07-17 11:45AM</span>
-					<p>Comment 2</p>
+					<span class="time-stamp">2014-07-17 12:26PM</span>
+					<p>Comment Dos</p>
+				</div>
+				<div class="comment-body">
+					<span class="userid">Anonymous</span>
+					<span class="time-stamp">2014-07-17 3:50PM</span>
+					<p>Comment Tres</p>
 				</div>
 				<div class="comment-box">
 					<span class="comment-box-header">Leave a comment</span>
 					<textarea class="form-control" rows="3"></textarea>
+					<button type="button" class="btn btn-default pull-right">Submit</button>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div id="00002" class="post col-md-12">
 				<a href="#" class="postlink"></a>
-				<span class="title">Sample post</span>
+				<span class="title">Sample post #2</span>
+				<p>Etiam eget lectus ac augue blandit tincidunt. Curabitur et bibendum sem. Curabitur ornare venenatis nibh eget convallis.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div id="00003" class="post col-md-12">
+				<a href="#" class="postlink"></a>
+				<span class="title">Sample post #3</span>
+				<p>Phasellus eleifend bibendum neque eget viverra. Praesent consectetur odio ut felis egestas molestie. Morbi lacinia volutpat tortor sed auctor. </p>
 			</div>
 		</div>
 
@@ -45,11 +61,4 @@
 			</ul>
 		</div>
 	</div>
-<script>
-$(document).ready(function() {
-	$('a.postlink').click(function() {
-		alert("Alert");
-	});
-});
-</script>
 </section>
